# so-logo-ascii-generator

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
src/: lib.rs  main.rs
